<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".MainActivity">

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="20sp"
    android:textAlignment="center"
    android:text="@string/app_name2"
    android:textColor="@color/teal_200">
</TextView>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="68dp"
    android:layout_marginTop="5dp"
    android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/dato1">
    </TextView>

    <EditText
        android:id="@+id/datouno"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center">
    </EditText>

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="68dp"
    android:layout_marginTop="5dp"
    android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/dato2">
    </TextView>

    <EditText
        android:id="@+id/datodos"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center">
    </EditText>

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="68dp"
    android:layout_marginTop="5dp"
    android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/dato3">
    </TextView>

    <EditText
        android:id="@+id/datotres"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center">
    </EditText>

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">

    <Button
        android:id="@+id/openGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abrirGoogle">

    </Button>

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center" >

    <Button
        android:id="@+id/llamar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/llamada">

    </Button>

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">

    <Button
        android:id="@+id/Wifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wifi">

    </Button>

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">

    <Button
        android:id="@+id/Camara"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camara">
    </Button>
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">

    <Button
        android:id="@+id/Contacto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contactos">
    </Button>
</LinearLayout>
</LinearLayout>

